# Factor-Mining-with-AI-Agent

./: README.md  pyproject.toml  requirements.txt  run_sample.sh  sample_panel.csv
agentic_factor/: __init__.py  agent.py  aggregation.py  cli.py  config.py  data.py  demo.py  engine.py  evaluation.py  pipeline.py  recipe.py  report.py  utils.py
configs/: demo_small.yaml  paper_default.yaml
example_run/: factor_scores_is.csv  factor_scores_oos.csv  lgbm_model.json  linear_model.json  promoted_factor_metrics_is.csv  promoted_factor_metrics_oos.csv  promoted_library.jsonl  report.md  resolved_config.yaml  round_logs.jsonl  summary.json
example_run/lgbm/: decile_returns.csv  quarterly_cost_table.csv  spread_returns.csv
example_run/linear/: decile_returns.csv  quarterly_cost_table.csv  spread_returns.csv
tests/: smoke_test.py  test_optimization_guards.py
